Fixed size and spacing of graph window

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Raleway', sans-serif;
+    height: 90vh;
 }
 
 h1 {
@@ -7,7 +8,7 @@ h1 {
 }
 
 #cy {
-    width: 600px;
-    height: 500px;
+    width: 100%;
+    height: 90%;
     margin: 0 auto;
 }
